# opendotamcp

./: .gitignore  CONTRIBUTING.md  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
lib/: fastmcp-opendota-stack.ts
python-lambda/: lambda_function.py  pyproject.toml
